--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,6 @@
 body {
+    
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: "Arial";
@@ -22,6 +24,11 @@ body {
     font-size: .8em
 }
 
+#cabecera #logo {
+    width: 40px;
+    vertical-align: middle;
+}
+
 #container {
     width: 70%;
     padding: 0;
@@ -35,5 +42,6 @@ body {
 }
 
 #post {
+    background: white;
     padding: 1em
 }
