--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,3 +45,10 @@ body {
     background: white;
     padding: 1em
 }
+
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, .5);
+}
