Cambio en la cabecera y color del footer: git commit --amend
git status
q
:q
c

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -47,7 +47,7 @@ body {
 }
 
 #footer{
-    background: #777;
+    background: #33a;
     color: white;
     text-align: center;
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, .5);
